# nats-micro

./: Cargo.toml
nats-microservice-application/: Cargo.toml
nats-microservice-application/src/: main.rs
nats-microservice-application/src/services/: add.rs  mod.rs  weather.rs
nats-microservice-rs/: Cargo.toml
nats-microservice-rs/src/: endpoint.rs  handler.rs  lib.rs
src/: endpoint.rs  handler.rs  main.rs
src/services/: add.rs  mod.rs
