[package]
name = "nats-microservice-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-nats = { version = "0.34.0", features = ["service"] }
bytes = "1.6.0"
futures = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"

nats-microservice-rs = { path = "../nats-microservice-rs" }
